--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "method-override": "^2.3.10",
-    "mongodb": "^3.0.4",
-    "morgan": "^1.9.0"
+    "mongodb": "^2.2.27",
+    "morgan": "^1.9.0",
+    "node-cron": "^1.2.1"
   }
 }
